--- a/dx12/dx12.vcxproj.filters
+++ b/dx12/dx12.vcxproj.filters
@@ -142,5 +142,8 @@
     <None Include="samplers.hlsli">
       <Filter>shader</Filter>
     </None>
+    <None Include="water_wave.hlsli">
+      <Filter>shader</Filter>
+    </None>
   </ItemGroup>
 </Project>
